--- a/TurtleGraphics/App.xaml
+++ b/TurtleGraphics/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TurtleGraphics"
-             StartupUri="XAML/MainWindow.xaml">
+             StartupUri="XAML/MainWindowEmpty.xaml">
     <Application.Resources>
 		<Style TargetType="ListBoxItem" x:Key="SeamlessNoHighlight">
 			<Setter Property="Padding" Value="0,1"/>
