--- a/TurtleGraphics/XAML/MainWindow.xaml
+++ b/TurtleGraphics/XAML/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TurtleGraphics"
         mc:Ignorable="d"
-        Title="{Binding Main_WindowName}">
+        Title="{Binding L.Main_WindowName}">
 	<d:Window.DataContext>
 		<local:MainWindow/>
 	</d:Window.DataContext>
@@ -45,7 +45,7 @@
 				<StackPanel Grid.Row="1" Visibility="{Binding ControlsVisible, Converter={StaticResource BoolToVis}}">
 					<StackPanel>
 						<TextBlock>
-					<Run Text="{Binding Main_Angle, Mode=OneWay}"/>
+					<Run Text="{Binding L.Main_Angle, Mode=OneWay, FallbackValue='Angle:'}"/>
 					<Run Text="{Binding AngleStr, Mode=OneWay}"/>
 						</TextBlock>
 						<TextBlock>
@@ -56,14 +56,14 @@
 					<Run Text="Y:"/>
 					<Run Text="{Binding YStr, Mode=OneWay}"/>
 						</TextBlock>
-						<TextBlock Text="{Binding Main_BackgroundCol}"/>
+						<TextBlock Text="{Binding L.Main_BackgroundCol, FallbackValue='Backgroud colour'}"/>
 						<TextBox Name="BackgroundColor" Text="Transparent"/>
-						<CheckBox Content="{Binding Main_ShowTurtle}" IsChecked="{Binding ShowTurtleCheckBox}"/>
+						<CheckBox Content="{Binding L.Main_ShowTurtle, FallbackValue='Show turtle'}" IsChecked="{Binding ShowTurtleCheckBox}"/>
 
-						<CheckBox Content="{Binding Main_AnimatePath}" IsChecked="{Binding AnimatePath}"/>
+						<CheckBox Content="{Binding L.Main_AnimatePath, FallbackValue='Animate path'}" IsChecked="{Binding AnimatePath}"/>
 						<StackPanel Visibility="{Binding AnimatePath, Converter={StaticResource BoolToVis}}">
 							<TextBlock>
-						<Run Text="{Binding Main_PathAnimSpeed, Mode=OneWay}"/>
+						<Run Text="{Binding L.Main_PathAnimSpeed, Mode=OneWay, FallbackValue='Path anim. speed'}"/>
 						<Run Text="{Binding ElementName=AnimSpeed, Path=Value, Mode=OneWay}"/>
 						<Run Text="/"/>
 						<Run Text="{Binding ElementName=AnimSpeed, Path=Maximum, Mode=OneWay}"/>
@@ -74,7 +74,7 @@
 						</StackPanel>
 
 						<TextBlock>
-						<Run Text="{Binding Main_TurtleSpeed, Mode=OneWay}"/>
+						<Run Text="{Binding L.Main_TurtleSpeed, Mode=OneWay, FallbackValue='Turtle speed'}"/>
 						<Run Text="{Binding ElementName=TurtleSpeed, Path=Value, Mode=OneWay}"/>
 						<Run Text="/"/>
 						<Run Text="{Binding ElementName=TurtleSpeed, Path=Maximum, Mode=OneWay}"/>
@@ -83,18 +83,14 @@
 					</StackPanel>
 					<StackPanel>
 						<Button Content="{Binding ButtonText, FallbackValue='Run/Stop'}" Command="{Binding ButtonCommand}"/>
-						<!-- Old way of doing things
-						<Button Content="{Binding ButtonTextFullSize, FallbackValue='Run Full-size'}" Command="{Binding ButtonFullSizeCommand}"/>
-						<Button Content="{Binding Main_ToggleFullscreen, FallbackValue='TODO Toggle Fullscreen'}" Command="{Binding ToggleFullScreenCommand}" IsEnabled="{Binding ToggleFullscreenEnabled}"/>
-						-->
-						<Button Content="{Binding Main_RunFullscreen}" Command="{Binding RunFullscreenCommand}"/>
-						<Button Content="{Binding GenericSave}" Command="{Binding SaveCommand}"/>
-						<Button Content="{Binding GenericLoad}" Command="{Binding LoadCommand}"/>
-						<Button Content="{Binding Main_Settings}" Command="{Binding SettingsCommand}"/>
+						<Button Content="{Binding L.Main_RunFullscreen, FallbackValue='Fullscreen'}" Command="{Binding RunFullscreenCommand}"/>
+						<Button Content="{Binding L.GenericSave, FallbackValue='Save...'}" Command="{Binding SaveCommand}"/>
+						<Button Content="{Binding L.GenericLoad, FallbackValue='Load...'}" Command="{Binding LoadCommand}"/>
+						<Button Content="{Binding L.Main_Settings, FallbackValue='Settings...'}" Command="{Binding SettingsCommand}"/>
 					</StackPanel>
 				</StackPanel>
 				<StackPanel Grid.Row="2">
-					<Button Content="{Binding Main_ToggleControlPanel}" Command="{Binding ControlsVisibleCommand}"/>
+					<Button Content="{Binding L.Main_ToggleControlPanel}" Command="{Binding ControlsVisibleCommand}"/>
 				</StackPanel>
 			</Grid>
 
