Better UI + further localization

--- a/TurtleGraphics/XAML/ExceptionDisplay.xaml
+++ b/TurtleGraphics/XAML/ExceptionDisplay.xaml
@@ -9,13 +9,13 @@
 	<Grid>
 		<Grid Background="Red" Opacity="0.6"/>
 		<StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Background="DarkRed" Margin="20">
-			<TextBlock Text="An exception occurred!" FontSize="24" FontWeight="DemiBold" Margin="5 0"/>
-			<TextBlock Text="Message:" FontWeight="Bold" Margin="5 0"/>
+			<TextBlock Text="{Binding L.Except_Header, FallbackValue='An exception occurred!'}" FontSize="24" FontWeight="DemiBold" Margin="5 0"/>
+			<TextBlock Text="{Binding L.Except_MessageLabel, FallbackValue='Message:'}" FontWeight="Bold" Margin="5 0"/>
 			<TextBlock TextWrapping="Wrap" Text="{Binding ExceptionMessage}" Margin="5 0"/>
-			<TextBlock Text="Stack Trace:" FontWeight="Bold" Margin="5 0"/>
+			<TextBlock Text="{Binding L.Except_StackTraceLabel, FallbackValue='Stack Trace:'}" FontWeight="Bold" Margin="5 0"/>
 			<TextBlock TextWrapping="Wrap" Text="{Binding StackTrace}" Margin="5 0"/>
 			<Grid Margin="5">
-				<Button Content="I'll do better." HorizontalAlignment="Right" Padding="5" Command="{Binding DismissCommand}" x:Name="FocusMe"/>
+				<Button Content="{Binding L.Except_ButtonLabel, FallbackValue='Ill do better!'}" HorizontalAlignment="Right" Padding="5" Command="{Binding DismissCommand}" x:Name="FocusMe"/>
 			</Grid>
 		</StackPanel>
 	</Grid>
