--- a/TurtleGraphics/XAML/LoadSaveDataDialog.xaml
+++ b/TurtleGraphics/XAML/LoadSaveDataDialog.xaml
@@ -24,7 +24,7 @@
 				</ListBox.ItemTemplate>
 			</ListBox>
 			<Button Content="{Binding GenericCancel, FallbackValue='Cancel'}" Command="{Binding CancelCommand}" Grid.Row="1"
-					Margin="0 5 0 0" Padding="0 4"/>
+					IsCancel="True" Margin="0 5 0 0" Padding="0 4"/>
 		</Grid>
 	</Grid>
 </UserControl>
