--- a/TurtleGraphics/XAML/ForLoopVarNameDialog.xaml
+++ b/TurtleGraphics/XAML/ForLoopVarNameDialog.xaml
@@ -17,7 +17,7 @@
 
 	<StackPanel Margin="5">
 		<TextBlock Text="{Binding L.Header, FallbackValue='Header'}" FontWeight="Bold" Margin="0 0 0 5"/>
-		<TextBox Text="{Binding VarName, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Width="200" Name="Text"/>
+		<TextBox Text="{Binding VarName, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Width="200" x:Name="Text"/>
 		<StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 32 5 0">
 			<Button Content="{Binding L.GenericBack, FallbackValue='Back'}" IsCancel="True" Padding="10 5" Margin="0 0 20 0"/>
 			<Button Content="OK" Command="{Binding OkCommand}" IsDefault="True" Padding="10 5"/>
