--- a/TurtleGraphics/App.xaml
+++ b/TurtleGraphics/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="TurtleGraphics.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TurtleGraphics"
+             xmlns:converters="clr-namespace:TurtleGraphics.XAML.Converters"
              StartupUri="XAML/MainWindow.xaml">
 	<Application.Resources>
 		<ResourceDictionary>
@@ -22,6 +22,8 @@
 			</Style>
 
 			<SolidColorBrush x:Key="mainColor" Color="#ffaaaab0"/>
+			<converters:CoordinateConverter x:Key="CoordConv"></converters:CoordinateConverter>
+			<converters:AngleConverter x:Key="AngleConv"></converters:AngleConverter>
 		</ResourceDictionary>
 	</Application.Resources>
 </Application>
